add authentication with apple

--- a/FinancialManager/Podfile
+++ b/FinancialManager/Podfile
@@ -8,4 +8,6 @@ target 'FinancialManager' do
   # Pods for FinancialManager
   pod 'Firebase/Analytics'
   pod 'Firebase/Firestore'
+  pod 'FirebaseUI'
+  pod 'Firebase/Auth'
 end
